# py-team-repos

./: README.md
to_be_verified/level-1/dharitri-etl/dharitri-etl-0.1.0/: README.md
to_be_verified/level-1/dharitri-etl/dharitri-etl-0.5.6/: README.md  pyproject.toml
to_be_verified/level-1/drt-chain-db-archive-scripts/drt-chain-db-archive-scripts-41d58e5-main/: README.md
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-0.3.3/: README.md  pyproject.toml  pyrightconfig.json
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-0.3.3/.github/workflows/: linter-flake8.yml
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-0.3.3/dharitri_sdk_core/: __init__.py  address.py  address_test.py  constants.py  contract_query_builder_test.py  interfaces.py  message.py  message_v1.py  message_v1_test.py  token_payment.py  token_payment_test.py  transaction_test.py
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-0.3.3/dharitri_sdk_core/transaction_builders/: __init__.py  contract_builders.py  contract_builders_test.py  dcdt_builders.py  dcdt_builders_test.py  default_configuration.py  transfers_builders_test.py
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-0.8.0/: README.md  pyproject.toml  requirements-dev.txt
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-1.0.0/: README.md  pyproject.toml
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-1.0.0/dharitri_sdk_core/: __init__.py  codec.py  codec_test.py  constants.py  contract_query_builder_test.py  message.py  serializer.py  tokens.py  transaction.py  transaction_test.py
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-1.0.0/dharitri_sdk_core/transaction_builders/: __init__.py  contract_builders.py  contract_builders_test.py  dcdt_builders.py  dcdt_builders_test.py  relayed_v1_builder_test.py  relayed_v2_builder_test.py
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-1.0.0/dharitri_sdk_core/transaction_factories/: smart_contract_transaction_factory_test.py  token_management_transactions_factory.py  transactions_factory_config.py
to_be_verified/level-1/drt-deprecated-sdk-py-core/drt-deprecated-py-sdk-core-1.0.0/dharitri_sdk_core/transaction_parsers/: token_operations_outcome_parser_test.py
to_be_verified/level-1/drt-deprecated-sdk-py-wallet/drt-py-deprecated-sdk-wallet-0.8.0/: README.md  requirements-dev.txt
to_be_verified/level-1/drt-deprecated-sdk-py-wallet/drt-py-deprecated-sdk-wallet-1.0.0/: pyproject.toml
to_be_verified/level-1/drt-deprecated-sdk-py-wallet/drt-py-deprecated-sdk-wallet-1.0.0/dharitri_sdk_wallet/: __init__.py  user_verifer.py
to_be_verified/level-1/drt-deprecated-sdk-py-wallet/drt-py-deprecated-sdk-wallet-1.0.0/multiversx_sdk_wallet/: user_test.py
to_be_verified/level-1/drt-presentations-pychain-2022/drt-presentations-pychain-2022-b51fd19-main/: .gitignore  README.md
to_be_verified/level-1/drt-py-deprecated-sdk-core/drt-py-deprecated-sdk-wallet-0.8.0/: pyproject.toml  pyrightconfig.json  requirements.txt
to_be_verified/level-1/drt-py-deprecated-sdk-core/drt-py-deprecated-sdk-wallet-0.8.0/.github/workflows/: linter-flake8.yml
to_be_verified/level-1/drt-py-deprecated-sdk-core/drt-py-deprecated-sdk-wallet-0.8.0/multiversx_sdk_wallet/: pem_entry_test.py
to_be_verified/level-1/drt-py-deprecated-sdk-core/drt-py-deprecated-sdk-wallet-1.0.0/: requirements.txt
to_be_verified/level-1/drt-sc-interaction-scripts/drt-sc-interaction-scripts-8a6685f-main/: nft-create.sh  prepare-args.py  set-special-roles-args.json
to_be_verified/level-1/drt-sdk-analytics/drt-sdk-analytics-aa16b6a-main/: README.md
to_be_verified/level-1/drt-sdk-clang-contract-builder/drt-sdk-clang-contract-builder-dd4dfd8-main/: README.md
to_be_verified/level-1/drt-sdk-playground/drt-sdk-playground-0ea01c8-main/: .gitignore  README.md  maintenance.md  (+1 more)
to_be_verified/level-2/drt-py-deprecated-sdk-network-providers/drt-deprecated-sdk-py-network-providers-1.0.0/: pyproject.toml  pyrightconfig.json  requirements.txt
to_be_verified/level-2/drt-py-deprecated-sdk-network-providers/drt-deprecated-sdk-py-network-providers-1.0.0/.github/workflows/: linter-flake8.yml
to_be_verified/level-2/drt-py-deprecated-sdk-network-providers/drt-deprecated-sdk-py-network-providers-1.0.0/dharitri_sdk_network_providers/: __init__.py  config.py  constants.py  contract_query_requests.py  proxy_network_provider.py  proxy_network_provider_test.py  tokens.py  transaction_events.py  transaction_logs.py
to_be_verified/level-2/drt-py-deprecated-sdk-network-providers/drt-deprecated-sdk-py-network-providers-1.0.0/multiversx_sdk_network_providers/: accounts.py  api_network_provider.py  api_network_provider_test.py  contract_query_response.py  contract_results.py  token_definitions.py  transaction_receipt.py  transactions.py
to_be_verified/level-2/drt-py-sdk-transaction-decoder/drt-py-sdk-transaction-decoder-0.4.0/: LICENSE  README.md  pyproject.toml  requirements.txt
to_be_verified/level-2/drt-py-sdk-transaction-decoder/drt-py-sdk-transaction-decoder-0.4.0/transaction_decoder/: __init__.py  transaction_decoder.py  transaction_decoder_test.py
(+643 files in other folders)
