[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dharitri-sdk-core"
version = "1.0.0"
authors = [
  { name="DharitrI" },
]
license = "MIT"
description = "Deprecated. Instead, use dharitri-sdk."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pycryptodomex==3.19.1",
  "protobuf==3.20.2"
]

[project.urls]
"Homepage" = "https://github.com/TerraDharitri/mx-sdk-py-core"
