[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "dharitri-sdk-wallet"
version = "1.0.0"
authors = [
  { name="DharitrI" },
]
license = "MIT"
description = "Deprecated. Instead, use dharitri-sdk."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pynacl==1.5.0",
  "cryptography==42.0.4",
  "mnemonic==0.20",
  "dharitri-sdk-core>=0.8.0,<0.9.0"
]

[tool.hatch.build]
include = [
  "dharitri_sdk_wallet/**"
]
exclude = [
  "dharitri_sdk_wallet/testdata/**"
]

[tool.hatch.build.targets.wheel.force-include]
"dharitri_sdk_wallet/libraries" = "dharitri_sdk_wallet/libraries"

[project.urls]
"Homepage" = "https://github.com/TerraDharitri/drt-py-sdk-wallet"
